fixed home page jump

--- a/src/view/home/home.module.scss
+++ b/src/view/home/home.module.scss
@@ -20,7 +20,7 @@
 .home_other_category_box {
   position: relative;
   width: 100%;
-  padding-bottom: 100%;
+  //padding-bottom: 100%;
   background-image: linear-gradient(310.59deg, #f2f3f6 3.8%, #e5e6ec 119.99%);
   box-shadow: -4px -4px 30px #ffffff, 3px 3px 20px rgba(36, 65, 93, 0.302);
   border-radius: 15px;
